worked on website structure

--- a/index.html
+++ b/index.html
@@ -10,17 +10,88 @@
 </head>
 <body>
     <!--gonna do this off a grid based system where i can have it like x / x / x -->
-    <div class="container" style="text-align: center;">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col" id="adverts">
-                <h1>adverts</h1>
+            <div class="col-sm-2" id="adverts">
+                <div class="card">
+                    <img class="card-img" src="advert1.jpg" alt="Subway">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert2.jpg" alt="McDonalds">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert3.jpg" alt="Costa">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert4.png" alt="Apple IPhone X">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert2.jpg" alt="McDonalds">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert1.jpg" alt="Subway">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert4.png" alt="Apple IPhone X">
+                </div>
             </div>
-            <div class="col">
-                <h1>main</h1>
+            <div class="col-md" style="text-align: center;">
+                <!--menu-->
+                <ul class="nav justify-content-center">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Languages
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item pe-2" href="#">English/Anglais <img class="img-fluid w-25" src="Flag-England.jpg" alt="English Flag / Anglais Drapeau"></a></li>
+                          <li><a class="dropdown-item pe-2" href="#">French/Français <img class="img-fluid w-25" src="FrenchFlag.jpg" alt="French Flag / Français Drapeau"></a></li>
+                        </ul>
+                      </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Shops</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Food</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Fire Exits</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Toilets</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Exits</a>
+                    </li>
+                    <li class="nav-item">
+                        <h1 class="display-6 border border-dark rounded-3"><strong>AMAP shopping centre</strong></h1>
+                    </li>
+                </ul>
+                <!--this is where the map will be located-->
+                <img src="AMAPMALL.png" class="img-fluid rounded" alt="AMAP Shopping Centre">
             </div>
-            <div class="col" id="adverts">
+            <div class="col-sm-2" id="adverts">
+                <img class="card-img" src="advert1.jpg" alt="Subway">
+                <div class="card">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert2.jpg" alt="McDonalds">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert3.jpg" alt="Costa">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert4.png" alt="Apple IPhone X">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert2.jpg" alt="McDonalds">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert1.jpg" alt="Subway">
+                </div>
+                <div class="card">
+                    <img class="card-img" src="advert4.png" alt="Apple IPhone X">
+                </div>
                 
-                <h1>adverts</h1>
             </div>
         </div>
     </div>
