--- a/food.html
+++ b/food.html
@@ -68,8 +68,14 @@
                     </li>
                 </ul>
                 <!--this is where the map will be located-->
-                <img id="map" src="AMAPMALL1.png" class="img-fluid rounded" alt="AMAP Shopping Centre">
-                <form class="d-flex">
+                <img id="map" src="AMAPMALLfood.png" class="img-fluid rounded" alt="AMAP Shopping Centre">
+                <div class="card border-dark">
+                    <div class="card-body">
+                      <h4 class="card-title">Food</h4>
+                      <p class="card-text">We currently have multiple different food shops and restaurants as seen on the map, for example we have : an Outback Steak House, Cheesecake factory, McDonalds, and many smaller restaurants. There is a little something for everyone here. </p>
+                    </div>
+                  </div>
+                  <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                     <a id="zoomIn" class="btn btn-primary" onclick="zoomIn()" role="button">+</a>
