--- a/shops.html
+++ b/shops.html
@@ -68,13 +68,19 @@
                     </li>
                 </ul>
                 <!--this is where the map will be located-->
-                <img id="map" src="AMAPMALL1.png" class="img-fluid rounded" alt="AMAP Shopping Centre">
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                    <a id="zoomIn" class="btn btn-primary" onclick="zoomIn()" role="button">+</a>
-                    <a id="zoomOut" class="btn btn-primary" onclick="zoomOut()" role="button">-</a>
-                </form>
+                <img id="map" src="AMAPMALLshops.png" class="img-fluid rounded" alt="AMAP Shopping Centre">
+                <div class="card border-dark">
+                    <div class="card-body">
+                      <h4 class="card-title">Shops</h4>
+                      <p class="card-text">We have many different shops here at AMAP, so there is always something to tickle your fancy, whether that be sporting goods, fashion, or just general utilities we have you covered.</p>
+                    </div>
+                  </div>
+                  <form class="d-flex">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                      <a id="zoomIn" class="btn btn-primary" onclick="zoomIn()" role="button">+</a>
+                      <a id="zoomOut" class="btn btn-primary" onclick="zoomOut()" role="button">-</a>
+                  </form>
             </div>
             <div class="col-sm-2" id="adverts">
                 <img class="card-img" src="advert1.jpg" alt="Subway">
