--- a/exits.html
+++ b/exits.html
@@ -68,7 +68,13 @@
                     </li>
                 </ul>
                 <!--this is where the map will be located-->
-                <img id="map" src="AMAPMALL1.png" class="img-fluid rounded" alt="AMAP Shopping Centre">
+                <img id="map" src="AMAPMALLexitsandfireexits.png" class="img-fluid rounded" alt="AMAP Shopping Centre">
+                <div class="card border-dark">
+                  <div class="card-body">
+                    <h4 class="card-title">Exits</h4>
+                    <p class="card-text">All fire exits double as regular exits due to their design</p>
+                  </div>
+                </div>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
